[project]
name = "km-chunker"
version = "0.1.0"
description = ""
authors = [
    {name = "Trent Zeng",email = "trentzz.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
]

[tool.poetry]
packages = [{include = "km_chunker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
