[project]
name = "km-chunker"
version = "0.1.0"
description = ""
authors = [
    {name = "Trent Zeng",email = "trentzz.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "km_chunker", from = "src"}]

[project.scripts]
km-chunker = "km_chunker.km_chunker:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
